implemented gdocs cms

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
 	</head>
 	<body>
 		<div class="content">
-			<img src="images/logo.png">
-			<h1>Pyrmont Supports</h1>
-			<div class="links">
-				<a href="resources.html">Handy Resources</a>
-				<a href="meeting_schedules.html">Meeting Schedule</a>
-				<a href="enquiry.html">Make an Enquiry</a>
+			<div class="content-narrow">
+				<img src="images/logo.png">
+				<h1>Pyrmont Supports</h1>
+				<div class="links">
+					<a href="resources.html">Useful Contacts</a>
+					<a href="meeting_schedules.html">Meeting Schedule</a>
+					<a href="enquiry.html">Make an Enquiry</a>
+				</div>
+				<p>As we all grow older, we want to work together so we can remain living independently in our own homes and enjoying life.</p>
+				
+				<p>Pyrmont Supports is working together to provide mutual support in areas that other services in our community are unable to provide. It is helping each other within our individual capacity. It is a two way process. People would join Pyrmont Supports and commit to the group. It has been set up as a 'not for profit association'</p>
+				<h3>Phone: 0487 477 113</h3>
+				<p class='fine-print'>ABN: 93 231 867 926 - Pyrmont Supports Inc.</p>
 			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<h3>Phone: 0487 477 113</h3>
-			<p class='fine-print'>ABN: 93 231 867 926 - Pyrmont Supports Inc.</p>
-
 		</div>
 
 
