--- a/meeting_schedules.html
+++ b/meeting_schedules.html
@@ -2,25 +2,21 @@
 <html>
 	<head>
 		<LINK href="stylesheet.css" rel="stylesheet" type="text/css">
+		<script src="./javascript/jquery.js"></script>
+		<script src="./javascript/meeting_schedule.js"></script>
 	</head>
 	<body>
 		<div class="content">
-			<img src="images/logo_small.png">
-			<h1>2013 Meetings</h1>
-			<a href="index.html">Home</a>
-			<p class='emphasis'>Members and friends are welcome for a social get together each Monday at 11am for coffee club at The Zebra Room, 1 Harris Street</p>
-			<br>
-			<p>All meetings are held at The Station, 58 Bowman Street Pyrmont</p>
-			<ul class='list'>
-				<li>
-					<h4>9am Saturday July 20 - AGM</h4>
-					<p>Talk on Advanced Care Directive</p>
-				</li>
-				<li>
-					<h4>9am Saturday October 12</h4>
-					<p>Talk topic TBD</p>
-				</li>
-			</ul>
+			<div class="content-narrow">
+				<img src="images/logo_small.png">
+				<h2>2013 Information Sessions</h2>
+				<a href="index.html">Home</a>
+				<p class='emphasis'>Members and friends are welcome for a social get together each Monday at 11am for coffee club at The Zebra Lounge, 1 Harris Street</p>
+				<p>Meets four times a year for informative discussions.</p>
+				<p>All meetings are held at The Station, 58 Bowman Street Pyrmont</p>
+				<ul class='list' id='schedule_list'>
+				</ul>
+			</div>
 		</div>
 
 
