--- a/enquiry.html
+++ b/enquiry.html
@@ -5,10 +5,12 @@
 	</head>
 	<body>
 		<div class="content">
-			<img src="images/logo_small.png">
-			<div>
-				<a href="index.html">Home</a>
-				<iframe src="https://docs.google.com/forms/d/1nYkzOpiWmhbbflL_Jxy1xB1-1hkejrITPcZGE5RKeF0/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			<div class="content-narrow">
+				<img src="images/logo_small.png">
+				<div>
+					<a href="index.html">Home</a>
+					<iframe src="https://docs.google.com/forms/d/1nYkzOpiWmhbbflL_Jxy1xB1-1hkejrITPcZGE5RKeF0/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+				</div>
 			</div>
 		</div>
 
