--- a/resources.html
+++ b/resources.html
@@ -2,64 +2,27 @@
 <html>
 	<head>
 		<LINK href="stylesheet.css" rel="stylesheet" type="text/css">
+		<script src="./javascript/jquery.js"></script>
+		<script src="./javascript/useful_information.js"></script>
 	</head>
 	<body>
 		<div class="content">
 			<img src="images/logo_small.png">
-			<h1>Handy Resources</h1>
+			<h2>Useful Contacts</h2>
 			<a href="index.html">Home</a>
-			<table>
-				<thead>
-					<th>Name</th>
-					<th>Address</th>
-					<th>Phone</th>
-					<th>Comments</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td><h4>Local Hospitals</h4></td>
-					</tr>
-					<tr>
-						<td>Balmain</td>
-						<td>Booth Street, Balmain</td>
-						<td>93952111</td>
-						<td>Casualty open evenings and weekends</td>
-					</tr>
-					<tr>
-						<td>Sydney Hospital and Sydney Eye Hospital</td>
-						<td>Macquarie Street, Sydney</td>
-						<td>93827111</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>Royal Prince Alfred</td>
-						<td>Missenden Road, Camperdown</td>
-						<td>95196111</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td><h4>Chemist</h4></td>
-					</tr>
-					<tr>
-						<td>Cincotta (discount)</td>
-						<td>53-55 Glebe Pt Road</td>
-						<td>96606919</td>
-						<td>Delivers to customers on arrangement</td>
-					</tr>
-					<tr>
-						<td>Harrisons</td>
-						<td>G14 Broadway Shopping Center Bay St</td>
-						<td>92124377</td>
-						<td>Delivers when possible. 
-							Hours <br>
-							Monday to Wednesday 9-7<br>
-							Thursday 9am-9pm<br>
-							Saturday 9am-6pm<br>
-							Sunday 10am-6pm
-						</td>
-					</tr>
-				</tbody>
-			</table>
+		
+	    	<table id="resources_table">
+			<thead>
+				<th width="200">Name</th>
+				<th width="250">Address</th>
+				<th width="150">Phone</th>
+				<th>Comments</th>
+			</thead>
+			<tbody>
+
+			</tbody>
+
+
 		</div>
 
 
