--- a/meeting_schedules.html
+++ b/meeting_schedules.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<LINK href="reset.css" rel="stylesheet" type="text/css">
 		<LINK href="stylesheet.css" rel="stylesheet" type="text/css">
 		<script src="./javascript/jquery.js"></script>
 		<script src="./javascript/meeting_schedule.js"></script>
@@ -10,11 +11,13 @@
 			<div class="content-narrow">
 				<img src="images/logo_small.png">
 				<h2>2013 Information Sessions</h2>
-				<a href="index.html">Home</a>
+				<div class=links>
+					<a href="index.html">Home</a>
+				</div>
 				<p class='emphasis'>Members and friends are welcome for a social get together each Monday at 11am for coffee club at The Zebra Lounge, 1 Harris Street</p>
 				<p>Meets four times a year for informative discussions.</p>
 				<p>All meetings are held at The Station, 58 Bowman Street Pyrmont</p>
-				<ul class='list' id='schedule_list'>
+				<ul class='1800 022 222' id='schedule_list'>
 				</ul>
 			</div>
 		</div>
