--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<LINK href="reset.css" rel="stylesheet" type="text/css">
 		<LINK href="stylesheet.css" rel="stylesheet" type="text/css">
 		<script src="./javascript/jquery.js"></script>
 		<script src="./javascript/useful_information.js"></script>
@@ -9,13 +10,22 @@
 		<div class="content">
 			<img src="images/logo_small.png">
 			<h2>Useful Contacts</h2>
-			<a href="index.html">Home</a>
-		
+			<div class=links>
+				<a href="index.html">Home</a>
+			</div>
+			<p>Pyrmont Supports Inc.: 0487 477 113 If unanswered please leave a message</p>
+			<div class="important-info">
+				<h4>Ambulance</h4>
+				<p>Emergency: 000</p>
+				<p>Booking:	131 233</p>
+				<h4>After Hours GP Helpline</h4>
+				<p>1800 022 222</p>
+			</div>
 	    	<table id="resources_table">
 			<thead>
 				<th width="200">Name</th>
 				<th width="250">Address</th>
-				<th width="150">Phone</th>
+				<th width="160">Phone</th>
 				<th>Comments</th>
 			</thead>
 			<tbody>
