--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<LINK href="reset.css" rel="stylesheet" type="text/css">
 		<LINK href="stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
