added social activities page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 	</head>
 	<body>
 		<div class="content">
+			<img src="images/logo.png">
+			<h1>Pyrmont Supports</h1>
+			<div class="links">
+				<a href="resources.html">Useful Contacts</a>
+				<a href="meeting_schedules.html">Meeting Schedule</a>
+				<a href="social_activities.html">Social Activities</a>
+				<a href="enquiry.html">Make an Enquiry</a>
+			</div>
 			<div class="content-narrow">
-				<img src="images/logo.png">
-				<h1>Pyrmont Supports</h1>
-				<div class="links">
-					<a href="resources.html">Useful Contacts</a>
-					<a href="meeting_schedules.html">Meeting Schedule</a>
-					<a href="enquiry.html">Make an Enquiry</a>
-				</div>
 				<p>As we all grow older, we want to work together so we can remain living independently in our own homes and enjoying life.</p>
 				
 				<p>Pyrmont Supports is working together to provide mutual support in areas that other services in our community are unable to provide. It is helping each other within our individual capacity. It is a two way process. People would join Pyrmont Supports and commit to the group. It has been set up as a 'not for profit association'</p>
